samples/_failures_safe/1761040502_1231b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73979bcf.c: In function ‘main’:
./samples/SAFE/__tmp_73979bcf.c:142:12: error: expected expression at end of input
  142 |     struct Matrix product = matrix_multiply(&mat1, &
      |            ^~~~~~
./samples/SAFE/__tmp_73979bcf.c:142:12: error: expected declaration or statement at end of input
